2001-10-16  Mark Mitchell  <mark@codesourcery.com>

	* qm/async.py: Remove.
	* qm/common.py (parse_time): Handle Windows format for GMT.
	* qm/qm.sh: Handle qmtest-remote correctly.
	* qm/test/base.py (set_up_resource): Fix typo.
	(clean_up_resource): Likewise.
	* qm/test/qmtest-remote.py: Rework to avoid use of qm.async.
	* qm/test/run.py (CommandThread): New class.
	(Target.GetChannels): Remove.
	(Target.EnqueueRunTest): Use EnqueueCommand, not _EnqueueCommand.
	(Target.EnqueueSetUpResource): Likewise.
	(Target.EnqueueCleanUpResource): Likewise.
	(Target.OnReplyReady): Rename to ...
	(Target.OnReply): ... this.  Rework.
	(LocalThread): New class.
	(SubprocessTarget): Use it throughout.
	(RemoteThread): New class.
	(RemoteShellTarget): Use it throughout.
	(RemoteDemultiplexerTarget): Remove.
	(TestRun.AddTestResult): Fold with ...
	(TestRun.AddResourceResult): ... into ...
	(TestRun.Result): ... this.
	(test_run): Adjust.
	(process_commands): Remove.
	* qm/test/classes/command.py (ExecTest): Adjust file closing
	for exception safety.

2001-10-14  Mark Mitchell  <mark@codesourcery.com>

	* qm/share/web/stylesheets/qm.css: Modify to work with Internet
	Explorer.

	* qm/web.py (WebServer.TranslateRequest): Use os.path.isabs
	for robustness.

	* qm/common.py (RcConfiguration.__Load): Do not crash if the
	HOME environment variable is not defined.

	* doc/manual/common-manual.xml: Revise.
	* doc/manual/manual.xml: Likewise.
	* doc/manual/test-manual.xml: Likewise.
	* doc/manual/test-reference.xml: Remove.
	* doc/manual/test-tour.xml: Revise.
	* doc/manual/track-tour.xml: Revise.
	* doc/manual/track-reference.xml: Merge into...
	* doc/manual/track-manual.xml: ... here.
	
2001-10-13  Alex Samuel  <samuel@codesourcery.com>

	* doc/manual/manual.xml (track-reference): New entity.
	Reference it.
	* doc/manual/track-manual.xml (sec-qmtrack-configuration): New
	section.
	* doc/manual/track-reference.xml: New file.
	
2001-10-13  Alex Samuel  <samuel@codesourcery.com>
